--- a/android-developer.html
+++ b/android-developer.html
@@ -75,7 +75,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://coinjobs.org/job/senior-android-developer-at-camlcase-new-york-ny/'>Senior Android Developer at camlCase (New York, NY) ? CoinJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coinjobs.org/job/senior-android-developer-at-camlcase-new-york-ny/'>Senior Android Developer at camlCase (New York, NY) ? CoinJobs</a></h5> 
 <p><span class="badge badge-light">New York, NYNew York, NY</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -106,7 +106,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p>1 day ago ... HomeAdvisor is seeking an Android Developer for our team of smart, dedicated 
 mobile developers. We're looking for a developer who has solid, demonstrable?...</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/careermovement/job/at5qqmbxhzh531onf1xtqt8gba'>Senior Android Developer/Android Architect | Career Movement</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/careermovement/job/at5qqmbxhzh531onf1xtqt8gba'>Senior Android Developer/Android Architect | Career Movement</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CAUnited States</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -265,7 +265,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p>2 days ago ... As an Android Developer you will be part of our Platform Development team, 
 where you will design and build the next generation of our mobile applications.</p>
 <hr/>
-<h5><a href='https://apply.workable.com/monese/j/920E6B51C3/'>Android Developer with Kotlin skills - Monese</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/monese/j/920E6B51C3/'>Android Developer with Kotlin skills - Monese</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... In joining Monese's award winning team as Android Developer you will be 
 participating in driving our already successful banking service to new heights.</p>
@@ -282,7 +282,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://asg.applytojob.com/apply/dbSkZEdD9J/Jr-Android-Application-Developer'>Jr. Android Application Developer - Advanced Systems Group - Career Page</a></h5> 
+<h5><a href='http://asg.applytojob.com/apply/dbSkZEdD9J/Jr-Android-Application-Developer'>Jr. Android Application Developer - Advanced Systems Group - Career Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA  Mountain View San Francisco</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -341,7 +341,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Amsterdam Amsterdam, Netherlands</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914834'>Job Application for Android Developer (eCommerce Platform) at Algorythma</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914834'>Job Application for Android Developer (eCommerce Platform) at Algorythma</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -484,7 +484,7 @@ Remote Android Developer at komoot | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/projekt202/7b0cf8e9-e875-44d5-a312-3c341d5edcc4'>projekt202 - Senior Android Developer (contract)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/projekt202/7b0cf8e9-e875-44d5-a312-3c341d5edcc4'>projekt202 - Senior Android Developer (contract)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -492,7 +492,7 @@ Remote Android Developer at komoot | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oz988fwI&__jvst=Employee+Referral&__jvsd=skamghwS&__jvsc=Twitter&bid=ngSe3MwG'>ServiceNow Careers - Senior Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oz988fwI&__jvst=Employee+Referral&__jvsd=skamghwS&__jvsc=Twitter&bid=ngSe3MwG'>ServiceNow Careers - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
